2004-02-13  Vincent van Adrighem  <adrighem@gnome.org>

	* nl.po: Translation updated by Tino Meinen.

2004-02-10  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

2004-02-09  Jorn Baayen  <jorn@nl.linux.org>

	* de.po: Added German translation by Matthias Debus <psic4t@netbands.de>

2004-02-09  Robert Sedak  <robert.sedak@sk.htnet.hr>

	* hr.po: Updated Croatian translation.

2004-02-09  Jorn Baayen  <jorn@nl.linux.org>

	* POTFILES.in: Add missing file

2004-01-30  Jorn Baayen  <jorn@nl.linux.org>

	* fr.po: Added French translation by Vincent Carriere

2004-01-24  Jorn Baayen  <jorn@nl.linux.org>
	
	* es.po: Added Spanish translation by Sergio Rubio

2004-01-24  Vincent van Adrighem  <adrighem@gnome.org>

	* nl.po: Translation updated by Tino Meinen.

2004-01-23  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

2004-01-23  Danilo Šegan  <dsegan@gmx.net>

	* sr.po, sr@Latn.po: Added Serbian translation.

	* POTFILES.in: Added missing files.

2004-01-21  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Added Czech translation.

2004-01-20  Vincent van Adrighem  <adrighem@gnome.org>

	* nl.po: Translation added by Tino Meinen.

2004-01-18  Christian Rose  <menthos@menthos.com>

	* .cvsignore: Added more entries.
	* sv.po: Added Swedish translation.
