@@ -1,3 +1,7 @@
+2004-02-15  Jorn Baayen  <jbaayen@gnome.org>
+
+	* POTFILES.in: Added missing files
+
 2004-02-13  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated by Tino Meinen.
